--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <h3 data-aos="fade-right">u're so cute</h3>
         <h3 data-aos="fade-left">u're so cute</h3>
         <h3 data-aos="fade-right">u're so pretty</h3>
-        <h3 data-aos="fade-left">u're so sexy</h3>
+        <h3 data-aos="fade-left">u're so smart</h3>
     </div>
 
     <div class="images" id="images">
